# canonicalize-pipeline

./: LICENSE  README.md  canonicalize-pipeline.cabal  canonicalize-pipeline.hs  default.nix  flake.nix  shell.nix
.github/workflows/: nix-build.yml
nix/: apps.nix  canonicalize-pipeline.nix  default.nix  overlay.nix  packages.nix  shell.nix  shells.nix
